2002-12-11 Geert Stappers <Geert.Stappers@xs4all.nl>

	* Makefile.am: added cong-plugin.h to make it into the dist
	Discovered that the toplevel `make distcheck` is usefull tool

2002-11-29 Dmitry G. Mastrukov

	* cong-primary-window.c, global.h, main.c
	
	I18n: fixes, about box, menus.
	
2002-11-28 Geert Stappers

	* cong-primary-window.c
	Version back in the about box.
	Added credits for documenters.
	Did try to add credits for translators, but failed.

2002-11-28 David Malcolm

        * cong-dialog.c, cong-dispspec-registry.c, cong-document.c, cong-dummy-element-editor.c, cong-editor-widget.c, cong-error-dialog.c, cong-error-file-open.c, cong-error-file-save.c, cong-error-tests.c, cong-location.c, cong-plugin.c, cong-primary-window.c, cong-section-head-editor.c, cong-span-text-editor.c, cong-test-view.c, cong-tree-view.c, cursor.c, dispspec.c, global.h, main.c, new_doc.c, open.c, popup.c, position.c, select.c, tree.c, xmldata.c, xmledit.c, xmlview.c

	Split global.h into lots of new header files; cursor support within new widget; try to load DTDs when opening files
	
	* Makefile.am

	Added the new files

	* cong-eel.c, cong-eel.h, cong-error-dialog.h, cong-dispspec.h, cong-document.h, cong-dispspec-registry.h, cong-plugin.h, cong-dialog.h

	Initial import

2002-11-27 David Malcolm

	* cong-document.c, cong-editor-widget.c, cong-location.c, cong-span-text-editor.c, cong-test-view.c, cong-tree-view.c, global.h, xmledit.c, xmlview.c

	Selection rendering in new widget

	* cong-span-text-editor.c

	Layout fixes
	
2002-11-26 David Malcolm

	* Makefile.am

	Added cong-editor-widget-impl.h, cong-dummy-element-editor.c, cong-editor-widget.c, cong-element-editor.c, cong-section-head-editor.c, cong-span-text-editor.c

	* cong-editor-widget-impl.h, cong-editor-widget.c, cong-element-editor.c, cong-section-head-editor.c, cong-span-text-editor.c, global.h

	Further improvements to new editor widget

	* cong-font.c, main.c

	More Pango support

	* cong-dummy-element-editor.c