@@ -54,6 +54,16 @@ GtkDialog *cong_dialog_save_confirmation_alert_new(GtkWindow *parent,
 						   const gchar *document_name,
 						   glong seconds_since_last_save_or_load);
 
+enum CongRevertConfirmationResult
+{
+	CONG_REVERT_CONFIRMATION_RESULT_CANCEL = 1,
+	CONG_REVERT_CONFIRMATION_RESULT_REVERT
+};
+
+GtkDialog *cong_dialog_revert_confirmation_alert_new(GtkWindow *parent, 
+						     const gchar *document_name,
+						     glong seconds_since_last_save_or_load);
+
 
 G_END_DECLS
 
